--- a/talks/index.html
+++ b/talks/index.html
@@ -52,6 +52,15 @@
         <td style="background: #ffffff" colspan="5" align="center">2023</td>
     </tr>
 
+
+    <tr>
+        <td>122.</td>
+        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2023</td>
+        <td><a href="https://2022.geecon.org">Maintain Social Distance this Spring</a></td>
+        <td>19.04.2023</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
     <tr>
         <td>121.</td>
         <td data-location="52.40746430234642, 16.911205324043184" data-place="Concordia Design">Code Talks</td>
