--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -475,6 +475,11 @@
         </section>
 
         <section>
+            <h3>Spring Data JDBC</h3>
+            <h4>Anemic JPA without lazy-loading, caching, dirty-checking...</h4>
+        </section>
+
+        <section>
             <h3>Kotlin Exposed</h3>
             <div class="fragment">
                 <pre><code data-trim="" style="font-size: 1em;line-height: 0.9; max-height: 90%">
