--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -499,7 +499,7 @@
         </section>
 
         <section>
-            <h2>Let's look again</h2>
+            <h2>JPA as part of domain</h2>
 
             <pre><code data-trim="" style="font-size: 0.8em;line-height: 0.9; max-height: 90%">
                 package com.pivovarit.domain;
@@ -520,6 +520,7 @@
 
         <section>
             <h2>ORM as plugin</h2>
+            <h3>Domain is not aware</h3>
 
             <pre><code data-trim="" style="font-size: 0.8em;line-height: 0.9; max-height: 90%">
                 package com.pivovarit.domain;
@@ -799,7 +800,7 @@
 
         <section>
             <h2>Pragmatic Hexagonal/Clean Architecture</h2>
-            <h3>TL;DR use interfaces!</h3>
+            <h3 class="fragment">TL;DR use interfaces!</h3>
         </section>
 
         <section>
