--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -53,12 +53,15 @@
 <div class="reveal">
 
     <div class="footer">
-        <small><a href="http://twitter.com/pivovarit">🇺🇦 @pivovarit</a></small>
+        <small><a href="http://twitter.com/pivovarit">sli.do 🇺🇦 @pivovarit</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
+
+        <section data-background="img/background.png">
+        </section>
         <section>
             <h1>Maintain Social Distance this Spring</h1>
             <br>
@@ -66,7 +69,6 @@
             <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
-
         </section>
 
         <section>
@@ -75,6 +77,12 @@
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
+        </section>
+
+        <section>
+            <h1>Questions?</h1>
+            <h2>sli.do</h2>
+            <h2>#geecon</h2>
         </section>
 
         <section></section>
