--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -60,9 +60,7 @@
     <div class="slides">
 
 
-        <section data-background="img/background.png">
-        </section>
-        <section>
+        <section data-background="img/geecon.png">
             <h1>Maintain Social Distance this Spring</h1>
             <br>
             <br>
@@ -71,7 +69,7 @@
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
 
-        <section>
+        <section data-background="img/geecon.png">
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Principal Engineer @ <a href="http://miim.ai">Mi|iM</a></h2>
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
@@ -79,7 +77,7 @@
             <br>
         </section>
 
-        <section>
+        <section data-background="img/geecon.png">
             <h1>Questions?</h1>
             <h2>app.sli.do</h2>
             <h2>#geecon</h2>
@@ -1080,7 +1078,7 @@
 
         <section>
             <h2>Thank You!</h2>
-            <h4><a href="https://pivovarit.github.io/talks/fantastic-frameworks">https://pivovarit.github.io/talks/assertive-spring</a>
+            <h4><a href="https://pivovarit.github.io/talks/fantastic-frameworks">https://pivovarit.github.io/talks/social-distance</a>
             </h4>
             <img src="img/talk_qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
