--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -501,7 +501,7 @@
         </section>
 
         <section>
-            But frameworks don't need to be that invasive as well, if you don't let them be.
+            But frameworks don't need to be that invasive as well if you don't let them.
         </section>
 
         <section>
