--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -767,6 +767,7 @@
 
         <section>
             <h3>Composition/Delegation is your friend</h3>
+            <h4>No need to use magic to add caching</h4>
             <pre><code data-trim="">
                 public interface UserSessionRepository {
                     // ...
