--- a/talks/wystepowanie-jest-fajne/index.html
+++ b/talks/wystepowanie-jest-fajne/index.html
@@ -73,8 +73,36 @@
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Principal Engineer @ <a href="http://miim.ai">Mi|iM</a></h2>
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+            <h2>First WJUG: 2015</h2>
+
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
+        </section>
+
+        <section>
+            <h1>Dlaczego występowanie jest fajne?</h1>
+        </section>
+
+        <section>
+            <img src="img/cebulari.png" width="50%"/>
+        </section>
+
+        <section>
+            <ul>
+                <li>Darmowe wejście na konferencje﹡</li>
+                <li>Darmowy transport/zakwaterowanie﹡</li>
+                <li>Dni wolne od pracy﹡</li>
+                <li>Darmowe atrakcje dla prelegentów﹡</li>
+            </ul>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
+
+            <small class="fragment">﹡ - różnie z tym bywa</small>
         </section>
 
         <section>
