--- a/talks/wystepowanie-jest-fajne/index.html
+++ b/talks/wystepowanie-jest-fajne/index.html
@@ -80,6 +80,12 @@
         </section>
 
         <section>
+            <img src="img/map.png" width="80%"/>
+            <h2>122 wystąpienia publiczne</h2>
+            <h2>50 szkoleń</h2>
+        </section>
+
+        <section>
             <h1>Dlaczego występowanie jest fajne?</h1>
         </section>
 
@@ -103,6 +109,47 @@
 
 
             <small class="fragment">﹡ - różnie z tym bywa</small>
+        </section>
+
+        <section>
+            <h1>Sprzedaż</h1>
+            <img src="img/golden-retriever.jpg" width="40%"/>
+        </section>
+
+        <section>
+            <h3>Sprzedaż przez wartość</h3>
+            <h4>Czyli jak przekonać drugą stronę, że mój produkt ma największą wartość?</h4>
+            <h4 class="fragment">...i żeby druga strona była skłonna za to solidnie zapłacić?</h4>
+        </section>
+
+        <section>
+            Budujemy w wyobraźni klienta konkretny obraz naszej firmy/marki, rozumiany jako zestaw emocji i wartości, które są dla klienta ważne.
+
+            <br><br>W efekcie wyniki współpracy zaczynają być nie tylko oczywiste, ale i emocjonalnie pożądane.
+        </section>
+
+        <section>
+            <h3>Sprzedaż jest w naszym życiu czy tego chcemy czy nie chcemy</h3>
+            <ul>
+                <li>Rekrutacja</li>
+                <li>Praca</li>
+                <li>Związki międzyludzkie</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3 class="fragment">Dlaczego mam użyć Twojej biblioteki?</h3>
+            <h3 class="fragment">Dlaczego mam Ci zapłacić XXX za YYY?</h3>
+            <h3 class="fragment">Dlaczego to Ty masz awansować a nie XXX?</h3>
+        </section>
+
+        <section>
+            <h3>Wystąpienia publiczne nie rozwiązują wszystkich problemów, ale potrafią dużo pomóc poprzez:</h3>
+            <ul>
+                <li class="fragment">Budowanie marki osobistej - social proof</li>
+                <li class="fragment">Networking: łatwy dostęp do specjalistów i sponsorów</li>
+                <li class="fragment">Zwiększanie pewności siebie</li>
+            </ul>
         </section>
 
         <section>
