--- a/talks/wystepowanie-jest-fajne/index.html
+++ b/talks/wystepowanie-jest-fajne/index.html
@@ -153,6 +153,14 @@
         </section>
 
         <section>
+            <h3>Niezapomniane wspomnienia</h3>
+            <img src="img/wspomnienia.png" width="60%"/>
+            <br>
+            <small>JBCN 2022</small>
+
+        </section>
+
+        <section>
             <h2>Dziękuję!</h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
