--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -60,7 +60,7 @@
     <div class="slides">
 
 
-        <section data-background="img/geecon.png">
+        <section>
             <h1>Maintain Social Distance this Spring</h1>
             <br>
             <br>
@@ -69,18 +69,12 @@
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
 
-        <section data-background="img/geecon.png">
+        <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Principal Engineer @ <a href="http://miim.ai">Mi|iM</a></h2>
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
-        </section>
-
-        <section data-background="img/geecon.png">
-            <h1>Questions?</h1>
-            <h2>app.sli.do</h2>
-            <h2>#geecon</h2>
         </section>
 
         <section></section>
