--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -53,7 +53,7 @@
 <div class="reveal">
 
     <div class="footer">
-        <small><a href="http://twitter.com/pivovarit">app.sli.do 🇺🇦 @pivovarit</a></small>
+        <small><a href="http://twitter.com/pivovarit">🇺🇦 @pivovarit</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
