--- a/talks/index.html
+++ b/talks/index.html
@@ -1,28 +1,21 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109711864-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-109711864-1');
+    </script>
     <meta charset="utf-8">
     <title>Grzegorz Piwowarek</title>
     <link href="index.css" rel="stylesheet">
 </head>
+
 <body>
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-109711864-1', 'pivovarit.github.io');
-    ga('send', 'pageview');
-
-</script>
 
 <div id="map"></div>
 <table border="1" cellspacing="0" cellpadding="3">
