--- a/talks/index.html
+++ b/talks/index.html
@@ -44,11 +44,19 @@
     </tr>
 
     <tr>
-        <td>123.</td>
+        <td>124.</td>
         <td data-location="54.386804141392595, 18.63453465169758" data-place="AmberExpo">InfoShare 2023</td>
         <td><a href="https://infoshare.pl/conference/">Maintain Social Distance this Spring</a></td>
         <td>24.05.2023</td>
         <td>Gdańsk/Poland</td>
+    </tr>
+
+    <tr>
+        <td>123.</td>
+        <td data-location="52.212239876870925, 21.005043569189716" data-place="AmberExpo">WJUG #300</td>
+        <td><a href="https://www.meetup.com/warszawa-jug/events/292729513/">Czemu fajnie być prelegentem?</a></td>
+        <td>25.04.2023</td>
+        <td>Warsaw/Poland</td>
     </tr>
 
     <tr>
