--- a/talks/index.html
+++ b/talks/index.html
@@ -36,6 +36,24 @@
     </tr>
 
     <tr>
+        <td>114.</td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2023</td>
+        <td><a href="https://jdd.org.pl">Embracing Microservices</a></td>
+        <td>24.10.2022</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
+        <td>118.</td>
+        <td data-location="50.108958, 14.585599" data-place="CineStar Prague">GeeCON Prague 2022</td>
+        <td><a href="https://2022.geecon.cz">Embracing Microservices</a></td>
+        <td>19.10.2022</td>
+        <td>Prague/Czech Republic</td>
+    </tr>
+
+
+
+    <tr>
         <td style="background: #ffffff" colspan="5" align="center">2023</td>
     </tr>
 
