--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -71,8 +71,8 @@
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
-            <h2>Principal Engineer @ <a href="http://miim.ai">Mi|iM</a></h2>
-            <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+            <h2>Independent Consultant @ 4Comprehension</h2>
+            <h2>Trainer/Consultant @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
         </section>
