--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -32,6 +32,7 @@
 
 </script>
 <div class="reveal">
+
     <div class="slides">
         <section>
             <h2>Embracing Microservices</h2>
@@ -45,6 +46,23 @@
             <h4>Trainer/Consultant @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
+        </section>
+
+        <section>
+            <img src="img/snake.jpg" width="60%"/>
+        </section>
+
+        <section>
+            <img src="img/hoare.jpg" width="30%"/>
+            <blockquote cite="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/">
+                "It was the invention of the null reference in 1965...I call it my billion-dollar mistake."
+            </blockquote>
+            <small>Tony Hoare</small>
+        </section>
+
+        <section>
+            <h4>Another <em>"billion-dollar mistake":</em></h4>
+            <h3 class="fragment">"Micro"</h3>
         </section>
 
         <section>
