--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -60,9 +60,35 @@
             <small>Tony Hoare</small>
         </section>
 
-        <section>
+        <section data-transition="fade">
             <h4>Another <em>"billion-dollar mistake":</em></h4>
-            <h3 class="fragment">"Micro"</h3>
+            <h3 class="fragment">Microservices</h3>
+        </section>
+
+        <section data-transition="fade">
+            <h4>Another <em>"billion-dollar mistake":</em></h4>
+            <h3>"Micro"-services</h3>
+        </section>
+
+        <section>
+            <img src="img/netflix.png" width="60%"/>
+            <br>
+            <small>Bruce Wong</small>
+        </section>
+
+        <section>
+            <blockquote cite="Building Microservices by Sam Newman">
+                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture"
+            </blockquote>
+            <small>Sam Newman</small>
+        </section>
+
+        <section>
+            <blockquote cite="Building Microservices by Sam Newman">
+                "Can you make a change to a service and deploy it by itself without changing anything else?
+                If the answer is no, then many of the advantages we discuss throughout this book will be hard for you to achieve."
+            </blockquote>
+            <small>Sam Newman</small>
         </section>
 
         <section>
