--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -53,6 +53,10 @@
         </section>
 
         <section>
+            <img src="img/microservices.jpeg" width="80%"/>
+        </section>
+
+        <section>
             <img src="img/hoare.jpg" width="30%"/>
             <blockquote cite="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/">
                 "It was the invention of the null reference in 1965...I call it my billion-dollar mistake."
@@ -89,6 +93,10 @@
                 If the answer is no, then many of the advantages we discuss throughout this book will be hard for you to achieve."
             </blockquote>
             <small>Sam Newman</small>
+        </section>
+
+        <section>
+            <h3>Technology Heterogeneity</h3>
         </section>
 
         <section>
