--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -100,6 +100,10 @@
         </section>
 
         <section>
+            <h3>Eventual Consistency != Accidental Consistency</h3>
+        </section>
+
+        <section>
             <h4>Thank You!</h4>
             <h4><a href="http://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
