--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -58,7 +58,8 @@
 
         <section>
             <img src="img/hoare.jpg" width="30%"/>
-            <blockquote cite="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/">
+            <blockquote
+                    cite="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/">
                 "It was the invention of the null reference in 1965...I call it my billion-dollar mistake."
             </blockquote>
             <small>Tony Hoare</small>
@@ -77,7 +78,8 @@
         <section>
             <img src="img/netflix.png" width="60%"/>
             <br>
-            <small>Bruce Wong</small>
+            <small>author: Bruce Wong</small>
+            <h3 class="fragment">Netflix: 2000 engineers</h3>
         </section>
 
         <section>
@@ -90,13 +92,21 @@
         <section>
             <blockquote cite="Building Microservices by Sam Newman">
                 "Can you make a change to a service and deploy it by itself without changing anything else?
-                If the answer is no, then many of the advantages we discuss throughout this book will be hard for you to achieve."
+                If the answer is no, then many of the advantages we discuss throughout this book will be hard for you to
+                achieve."
             </blockquote>
             <small>Sam Newman</small>
         </section>
 
         <section>
             <h3>Technology Heterogeneity</h3>
+            <br>
+            <ul>
+                <li>Sounds great on paper</li>
+                <li>Most companies will benefit more from standardized tech stack</li>
+                <li>Don't throw in new tech unless there's a good reason for it</li>
+            </ul>
+            <h4></h4>
         </section>
 
         <section>
