--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -113,6 +113,14 @@
             <h3>Eventual Consistency != Accidental Consistency</h3>
         </section>
 
+        <section data-transition="fade">
+            <img src="img/dual-write.png" width="60%"/>
+        </section>
+
+        <section data-transition="fade">
+            <img src="img/dual-write-2.png" width="60%"/>
+        </section>
+
         <section>
             <h4>Thank You!</h4>
             <h4><a href="http://twitter.com/pivovarit">@pivovarit</a></h4>
