--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -42,8 +42,7 @@
 
         <section>
             <h3>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h3>
-            <h4>Independent Consultant @ 4Comprehension</h4>
-            <h4>Trainer/Consultant @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h4>
+            <h4>Owner/Independent Consultant @ 4Comprehension</h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
@@ -53,7 +52,24 @@
         </section>
 
         <section>
-            <img src="img/microservices.jpeg" width="80%"/>
+            <h4>Microservices: the Main Point</h4>
+            <h3 class="fragment">Modularity</h3>
+        </section>
+
+        <section data-transition="fade">
+            <img src="img/tight-coupling.png" width="50%"/>
+            <br>
+            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
+        </section>
+        <section data-transition="fade">
+            <img src="img/loose-coupling.png" width="50%"/>
+            <br>
+            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
+        </section>
+
+        <section>
+            <h3>But if you do not do your homework</h3>
+            <img class="fragment" src="img/microservices.jpeg" width="80%"/>
         </section>
 
         <section>
