--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -52,8 +52,8 @@
         </section>
 
         <section>
-            <h4>Microservices: the Main Point</h4>
-            <h3 class="fragment">Modularity</h3>
+            <h4>Microservices: the Main Idea</h4>
+            <h3 class="fragment">High-level Modularity</h3>
         </section>
 
         <section data-transition="fade">
