--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -81,6 +81,8 @@
             <small>Tony Hoare</small>
         </section>
 
+
+
         <section data-transition="fade">
             <h4>Another <em>"billion-dollar mistake":</em></h4>
             <h3 class="fragment">Microservices</h3>
@@ -96,6 +98,12 @@
             <br>
             <small>author: Bruce Wong</small>
             <h3 class="fragment">Netflix: 2000 engineers</h3>
+        </section>
+
+        <section>
+            <h3>The Common Sense Default</h3>
+            <img src="img/citadel.png" width="50%"/>
+            <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
         </section>
 
         <section>
