--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -51,25 +51,14 @@
             <img src="img/snake.jpg" width="60%"/>
         </section>
 
-        <section>
-            <h4>Microservices: the Main Idea</h4>
-            <h3 class="fragment">High-level Modularity</h3>
+        <section data-transition="fade">
+            <img src="img/microservices.jpeg" width="80%"/>
+            <small><a href="https://twitter.com/ddprrt/status/1425418538257428488">https://twitter.com/ddprrt/status/1425418538257428488</a></small>
         </section>
 
         <section data-transition="fade">
-            <img src="img/tight-coupling.png" width="50%"/>
-            <br>
-            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
-        </section>
-        <section data-transition="fade">
-            <img src="img/loose-coupling.png" width="50%"/>
-            <br>
-            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
-        </section>
-
-        <section>
-            <h3>But if you do not do your homework</h3>
-            <img class="fragment" src="img/microservices.jpeg" width="80%"/>
+            <img src="img/microservices-2.jpeg" width="80%"/>
+            <small><a href="https://twitter.com/ddprrt/status/1425418538257428488">https://twitter.com/ddprrt/status/1425418538257428488</a></small>
         </section>
 
         <section>
@@ -79,6 +68,10 @@
                 "It was the invention of the null reference in 1965...I call it my billion-dollar mistake."
             </blockquote>
             <small>Tony Hoare</small>
+        </section>
+
+        <section>
+            <img src="img/future-null.jpg" width="60%"/>
         </section>
 
 
@@ -101,17 +94,34 @@
         </section>
 
         <section>
+            <blockquote cite="Building Microservices by Sam Newman">
+                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture"
+            </blockquote>
+            <small>Sam Newman</small>
+        </section>
+
+        <section>
             <h3>The Common Sense Default</h3>
             <img src="img/citadel.png" width="50%"/>
             <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
         </section>
 
         <section>
-            <blockquote cite="Building Microservices by Sam Newman">
-                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture"
-            </blockquote>
-            <small>Sam Newman</small>
+            <h4>Microservices: the Main Idea</h4>
+            <h3 class="fragment">High-level Modularity</h3>
         </section>
+
+        <section data-transition="fade">
+            <img src="img/tight-coupling.png" width="50%"/>
+            <br>
+            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
+        </section>
+        <section data-transition="fade">
+            <img src="img/loose-coupling.png" width="50%"/>
+            <br>
+            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
+        </section>
+
 
         <section>
             <blockquote cite="Building Microservices by Sam Newman">
