--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -95,7 +95,7 @@
 
         <section>
             <blockquote cite="Building Microservices by Sam Newman">
-                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture"
+                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture."
             </blockquote>
             <small>Sam Newman</small>
         </section>
