--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -83,32 +83,17 @@
 
         <section data-transition="fade">
             <h4>Another <em>"billion-dollar mistake":</em></h4>
-            <h3>"Micro"-services</h3>
+            <h3>"Micro"</h3>
+        </section>
+
+        <section data-transition="fade">
+            <h3>Antipattern #1: Size Obsession</h3>
         </section>
 
         <section>
-            <img src="img/netflix.png" width="60%"/>
-            <br>
-            <small>author: Bruce Wong</small>
-            <h3 class="fragment">Netflix: 2000 engineers</h3>
-        </section>
-
-        <section>
-            <blockquote cite="Building Microservices by Sam Newman">
-                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture."
-            </blockquote>
-            <small>Sam Newman</small>
-        </section>
-
-        <section>
-            <h3>The Common Sense Default</h3>
-            <img src="img/citadel.png" width="50%"/>
-            <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
-        </section>
-
-        <section>
-            <h4>Microservices: the Main Idea</h4>
-            <h3 class="fragment">High-level Modularity</h3>
+            <h4>Microservices: the Main Ideas</h4>
+            <h3 class="fragment">Modularity</h3>
+            <h3 class="fragment">Independence</h3>
         </section>
 
         <section data-transition="fade">
@@ -122,6 +107,33 @@
             <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
         </section>
 
+        <section>
+            <blockquote cite="Building Microservices by Sam Newman">
+                "The smaller the service, the more you maximize the benefits and downsides of microservice architecture."
+            </blockquote>
+            <small>Sam Newman</small>
+        </section>
+
+        <section>
+            <img src="img/netflix.png" width="80%"/>
+            <br>
+            <small>author: Bruce Wong</small>
+            <h3 class="fragment">Netflix: 2000 engineers</h3>
+        </section>
+
+
+
+        <section>
+            <h3>The Common Sense Default</h3>
+            <h5>for a small team</h5>
+            <img src="img/citadel.png" width="50%"/>
+            <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
+        </section>
+
+        <section>
+            <h3>Old Habits Die Hard</h3>
+        </section>
+
 
         <section>
             <blockquote cite="Building Microservices by Sam Newman">
@@ -132,28 +144,30 @@
             <small>Sam Newman</small>
         </section>
 
-        <section>
-            <h4>Old Habits Die Hard</h4>
-        </section>
+
 
         <section>
             <h3>Sync vs Async</h3>
-        </section>
-
-        <section>
-            <h3>Technology Heterogeneity</h3>
-            <br>
-            <ul>
-                <li>Sounds great on paper</li>
-                <li>Most companies will benefit more from standardized tech stack</li>
-                <li>Don't throw in new tech unless there's a good reason for it</li>
-            </ul>
-            <h4></h4>
+            <h5 class="fragment">Consistency vs Availability</h5>
+            <h4 class="fragment">Want to be fully independent? Forget about Strict Consistency</h4>
         </section>
 
         <section>
             <h4>Eventual Consistency != Accidental Consistency</h4>
         </section>
+
+        <section>
+            <h3>Technology Heterogeneity</h3>
+            <br> TODO: whether they should meme
+            <ul>
+                <li>Sounds great on paper</li>
+                <li>Most companies will benefit more from standardized tech stack with occasional experiments</li>
+                <li>Don't throw in new tech unless there's a good reason for it</li>
+            </ul>
+            <h4></h4>
+        </section>
+
+
 
         <section data-transition="fade">
             <img src="img/dual-write.png" width="60%"/>
