--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -88,12 +88,16 @@
 
         <section data-transition="fade">
             <h3>Antipattern #1: Size Obsession</h3>
+            <h4 class="fragment">How small is "micro"?</h4>
+            <h5 class="fragment">N lines of code?</h5>
+            <h5 class="fragment">N classes?</h5>
+            <h5 class="fragment">N MBs?</h5>
+            <h5 class="fragment">Rewritable in X time?</h5>
         </section>
 
         <section>
-            <h4>Microservices: the Main Ideas</h4>
-            <h3 class="fragment">Modularity</h3>
-            <h3 class="fragment">Independence</h3>
+            <h4>Microservices: the Main Idea</h4>
+            <h3 class="fragment">Independence through Modularity</h3>
         </section>
 
         <section data-transition="fade">
@@ -115,17 +119,20 @@
         </section>
 
         <section>
-            <img src="img/netflix.png" width="80%"/>
+            <img src="img/netflix.png" width="70%"/>
             <br>
             <small>author: Bruce Wong</small>
             <h3 class="fragment">Netflix: 2000 engineers</h3>
         </section>
 
-
+        <section>
+            <h5>Do not ask about the max size, but when to split</h5>
+            <br>
+            <h5 class="fragment">The #1 rule of distributed systems: don't do it until you have to</h5>
+        </section>
 
         <section>
-            <h3>The Common Sense Default</h3>
-            <h5>for a small team</h5>
+            <h3>The Pragmatic Default</h3>
             <img src="img/citadel.png" width="50%"/>
             <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
         </section>
