--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -138,9 +138,8 @@
         </section>
 
         <section>
-            <h3>Old Habits Die Hard</h3>
+            <h3>Antipattern #2: Old Habits Die Hard</h3>
         </section>
-
 
         <section>
             <blockquote cite="Building Microservices by Sam Newman">
@@ -150,8 +149,6 @@
             </blockquote>
             <small>Sam Newman</small>
         </section>
-
-
 
         <section>
             <h3>Sync vs Async</h3>
