--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -88,6 +88,7 @@
 
         <section data-transition="fade">
             <h3>Antipattern #1: Size Obsession</h3>
+            <h4 class="fragment">Microservice vs service?</h4>
             <h4 class="fragment">How small is "micro"?</h4>
             <h5 class="fragment">N lines of code?</h5>
             <h5 class="fragment">N classes?</h5>
@@ -139,6 +140,10 @@
 
         <section>
             <h3>Antipattern #2: Old Habits Die Hard</h3>
+            <h5 class="fragment">Single version for all services</h5>
+            <h5 class="fragment">All-or-nothing deployments</h5>
+            <h5 class="fragment">Dedicated "DevOps" teams</h5>
+            <h5 class="fragment">End-to-end Acceptance tests</h5>
         </section>
 
         <section>
