--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -162,18 +162,23 @@
         </section>
 
         <section>
-            <h4>Eventual Consistency != Accidental Consistency</h4>
+            <h4>Antipattern #3:</h4>
+            <h3>Accidental Consistency</h3>
+            <h5>Eventual Consistency != Accidental Consistency</h5>
         </section>
 
         <section>
+            <h4>Antipattern #4:</h4>
             <h3>Technology Heterogeneity</h3>
-            <br> TODO: whether they should meme
+            <img src="img/goldblum.jpeg" width="70%"/>
+        </section>
+
+        <section>
             <ul>
                 <li>Sounds great on paper</li>
                 <li>Most companies will benefit more from standardized tech stack with occasional experiments</li>
                 <li>Don't throw in new tech unless there's a good reason for it</li>
             </ul>
-            <h4></h4>
         </section>
 
 
