--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -142,7 +142,7 @@
             <h3>Antipattern #2: Old Habits Die Hard</h3>
             <h5 class="fragment">Single version for all services</h5>
             <h5 class="fragment">All-or-nothing deployments</h5>
-            <h5 class="fragment">Dedicated "DevOps" teams</h5>
+            <h5 class="fragment">Dedicated "DevOps" bottleneck teams</h5>
             <h5 class="fragment">End-to-end Acceptance tests</h5>
         </section>
 
@@ -156,6 +156,10 @@
         </section>
 
         <section>
+            <h3>Monorepos make it easy to stick to old habits</h3>
+        </section>
+
+        <section>
             <h3>Sync vs Async</h3>
             <h5 class="fragment">Consistency vs Availability</h5>
             <h4 class="fragment">Want to be fully independent? Forget about Strict Consistency</h4>
@@ -163,12 +167,6 @@
 
         <section>
             <h4>Antipattern #3:</h4>
-            <h3>Accidental Consistency</h3>
-            <h5>Eventual Consistency != Accidental Consistency</h5>
-        </section>
-
-        <section>
-            <h4>Antipattern #4:</h4>
             <h3>Technology Heterogeneity</h3>
             <img src="img/goldblum.jpeg" width="70%"/>
         </section>
@@ -181,6 +179,11 @@
             </ul>
         </section>
 
+        <section>
+            <h4>Antipattern #4:</h4>
+            <h3>Accidental Consistency</h3>
+            <h5>Eventual Consistency != Accidental Consistency</h5>
+        </section>
 
 
         <section data-transition="fade">
@@ -207,7 +210,8 @@
         </section>
 
         <section>
-            <h4>Coupling via Shared Libraries</h4>
+            <h5>Antipattern #5:</h5>
+            <h3>Shared Libraries</h3>
         </section>
 
         <section>
