--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -156,13 +156,21 @@
         </section>
 
         <section>
-            <h3>Monorepos make it easy to stick to old habits</h3>
+            <h4>Monorepos make it easy to stick to old habits</h4>
         </section>
 
         <section>
             <h3>Sync vs Async</h3>
             <h5 class="fragment">Consistency vs Availability</h5>
             <h4 class="fragment">Want to be fully independent? Forget about Strict Consistency</h4>
+        </section>
+
+        <section data-transition="fade">
+            <img src="img/sync1.png" width="80%"/>
+        </section>
+
+        <section data-transition="fade">
+            <img src="img/sync2.png" width="80%"/>
         </section>
 
         <section>
