--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -211,6 +211,16 @@
             <h3>Change Data Capture</h3>
         </section>
 
+        <section data-transition="fade">
+            <h4>Dual-Write (distributed transaction)</h4>
+            <img src="img/cdc3.png" width="50%"/>
+        </section>
+
+        <section data-transition="fade">
+            <h4>Change Data Capture</h4>
+            <img src="img/cdc4.png" width="50%"/>
+        </section>
+
         <section>
             <h4>Antipattern #4:</h4>
             <h3>Technology Heterogeneity</h3>
