--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -49,6 +49,10 @@
         </section>
 
         <section>
+            <h2>Questions: http://sli.do</h2>
+        </section>
+
+        <section>
             <img src="img/snake.jpg" width="60%"/>
         </section>
 
@@ -219,6 +223,11 @@
         <section data-transition="fade">
             <h4>Change Data Capture</h4>
             <img src="img/cdc4.png" width="50%"/>
+        </section>
+
+        <section>
+            <h4>Transactional Outbox Pattern</h4>
+            <h4>Debezium</h4>
         </section>
 
         <section>
