--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -168,6 +168,13 @@
         </section>
 
         <section>
+            <h4>Antipattern #3</h4>
+            <h3>Not Embracing Eventual Consistency</h3>
+
+            <h6>So you have 150 services and they all need to be up and responsive at the same time for the whole system to work?</h6>
+        </section>
+
+        <section>
             <h3>Sync vs Async</h3>
             <h4 class="fragment">Both are good choice if you understand trade-offs</h4>
             <h5 class="fragment">Consistency vs Availability</h5>
@@ -184,7 +191,7 @@
         </section>
 
         <section>
-            <h4>Antipattern #3:</h4>
+            <h4>Antipattern #4:</h4>
             <h3>Accidental Consistency</h3>
             <h5>Eventual Consistency != Accidental Consistency</h5>
         </section>
@@ -231,7 +238,7 @@
         </section>
 
         <section>
-            <h4>Antipattern #4:</h4>
+            <h4>Antipattern #5:</h4>
             <h3>Technology Heterogeneity</h3>
             <img src="img/goldblum.jpeg" width="70%"/>
         </section>
