--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -34,13 +34,13 @@
 <div class="reveal">
 
     <div class="slides">
-        <section>
+        <section data-background-image="img/background.png">
             <h2>Embracing Microservices</h2>
             <h4><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
         </section>
 
-        <section>
+        <section data-background-image="img/background.png">
             <h3>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h3>
             <h4>Owner/Independent Consultant @ 4Comprehension</h4>
             <h4>WarsawJUG Leader</h4>
@@ -48,8 +48,9 @@
             <br>
         </section>
 
-        <section>
+        <section data-background-image="img/background.png">
             <h2>Questions: http://sli.do</h2>
+            <h2>Code: #geecon</h2>
         </section>
 
         <section>
@@ -252,6 +253,12 @@
         <section>
             <h5>Antipattern #5:</h5>
             <h3>Shared Libraries</h3>
+        </section>
+
+        <section>
+            <h4 >Sound like a noble effort</h4>
+            <h4 class="fragment">Can contribute to dependency hell</h4>
+            <h4 class="fragment">Need to treated like libraries and not bags with code</h4>
         </section>
 
         <section>
