--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -252,13 +252,14 @@
 
         <section>
             <h5>Antipattern #5:</h5>
-            <h3>Shared Libraries</h3>
+            <h3>DRY abuse and Shared Libraries </h3>
         </section>
 
         <section>
-            <h4 >Sound like a noble effort</h4>
+            <h4>Sound like a noble effort</h4>
             <h4 class="fragment">Can contribute to dependency hell</h4>
             <h4 class="fragment">Need to treated like libraries and not bags with code</h4>
+            <h4 class="fragment">A small change can result in N deployments</h4>
         </section>
 
         <section>
