--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -119,6 +119,11 @@
         </section>
 
         <section>
+            <h4>You can have modularity without microservices</h4>
+            <img class="fragment" src="img/monolith.png" width="40%"/>
+        </section>
+
+        <section>
             <blockquote cite="Building Microservices by Sam Newman">
                 "The smaller the service, the more you maximize the benefits and downsides of microservice architecture."
             </blockquote>
