--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -124,6 +124,10 @@
         </section>
 
         <section>
+            <img src="img/evolution.png" width="70%"/>
+        </section>
+
+        <section>
             <blockquote cite="Building Microservices by Sam Newman">
                 "The smaller the service, the more you maximize the benefits and downsides of microservice architecture."
             </blockquote>
@@ -139,8 +143,13 @@
 
         <section>
             <h5>Do not ask about the max size, but when to split</h5>
+        </section>
+
+        <section>
+            <h5>So... when do we split?</h5>
             <br>
             <h5 class="fragment">The #1 rule of distributed systems: don't do it until you have to</h5>
+            <h5 class="fragment">Do it when pain becomes problematic</h5>
         </section>
 
         <section>
