--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -277,6 +277,15 @@
         </section>
 
         <section>
+            <h3>Summary</h3>
+            <h5 class="fragment">Do not start with microservices, split existing services when absolutely necessary</h5>
+            <h5 class="fragment">You're now working with N independent systems, stop treating them like they are one</h5>
+            <h5 class="fragment">You're now prone to Fallacies of Distributed Computing - embrace Eventual Consistency</h5>
+            <h5 class="fragment">Pay attention to guarantees of your system - At-Most-Once and Accidental Consistency might not be good enough</h5>
+            <h5 class="fragment">Add new tech only when there's a good reason to do it</h5>
+        </section>
+
+        <section>
             <h4>Thank You!</h4>
             <h4><a href="http://twitter.com/pivovarit">@pivovarit</a></h4>
             <small><a href="https://4comprehension.com">4comprehension.com</a></small>
